[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/UI/MapNode.gd" type="Script" id=1]
[ext_resource path="res://Assets/Maps/MapBorder1.png" type="Texture" id=2]
[ext_resource path="res://Assets/Maps/MapBacking1.png" type="Texture" id=3]

[node name="MapNode" type="Control"]
margin_left = -2.0
margin_right = 38.0
margin_bottom = 40.0
script = ExtResource( 1 )
border_image = ExtResource( 2 )
backing_image = ExtResource( 3 )

[node name="MapBacking" type="TextureRect" parent="."]
self_modulate = Color( 0, 0, 0, 1 )
margin_right = 1024.0
margin_bottom = 600.0
texture = ExtResource( 3 )

[node name="MapBorder" type="TextureRect" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
texture = ExtResource( 2 )

[node name="Tween" type="Tween" parent="."]

[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
